force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Fin_Wall_Modifiers__c.field-meta.xml
<CustomField>
    <fullName>Default_Fin_Wall_Modifiers__c</fullName>
    <formula>IF(NCMT_Project__r.Parking_Structure__c = True , 1, IF(NCMT_Project__r.Parking_Deck__c = True, 1 , IF( NCMT_Project__r.Below_Grade_Structure__c = True , 1 , 0 ) ) ) * 
IF( NCMT_Project__r.Sloped_Parking_Deck__c = True , 1, IF( NCMT_Project__r.Speed_Ramp__c = True, 1, 0) )*
IF( NCMT_Project__r.Optimized_for_Parking__c = True, 1, IF( NCMT_Project__r.Medium_Efficiency__c = True, 1, IF(NCMT_Project__r.Low_Efficiency__c = True, 1, 0) ) ) * 
IF( NCMT_Project__r.Utilitarian__c = True, 0.5, IF( NCMT_Project__r.Medium__c = True, 0.5, IF( NCMT_Project__r.High__c = True, 1, 0) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Fin Wall Modifiers</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>