force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Finished_Opaque_Wall_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Finished_Opaque_Wall_SF__c</fullName>
    <formula>Default_Finished_Wall_Area_SF__c -  Default_Glazing_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Finished Opaque Wall SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>