force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Finished_Site_Area__c.field-meta.xml
<CustomField>
    <fullName>Default_Finished_Site_Area__c</fullName>
    <label>Default Finished Site Area</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>