force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Finished_Wall_Area_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Finished_Wall_Area_SF__c</fullName>
    <formula>ROUND( (Cladding_Skin_Ratio__c *  NCMT_Project__r.Total_GSF__c) ,0) -  Default_Retaining_Wall_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Finished Wall Area SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>