force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Fire_Protection_Area_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Fire_Protection_Area_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Area SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>