force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Fixtures_Public_Restrooms__c.field-meta.xml
<CustomField>
    <fullName>Default_Fixtures_Public_Restrooms__c</fullName>
    <formula>Round(((Default_Plumbing_Fixtures__c /1000)* NCMT_Project__r.Total_GSF__c),0) -  Fixtures_Utility_Water_Coolers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Fixtures - Public Restrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>