force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Flat_Roof_PS__c.field-meta.xml
<CustomField>
    <fullName>Default_Flat_Roof_PS__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>Default Flat Roof PS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>