force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Foot_Print_Area__c.field-meta.xml
<CustomField>
    <fullName>Default_Foot_Print_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Foot Print Area SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>