force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Freeze_Depth_Footing_Depth__c.field-meta.xml
<CustomField>
    <fullName>Default_Freeze_Depth_Footing_Depth__c</fullName>
    <description>Value from Location Parameters for others excluding parking garage</description>
    <formula>IF( NCMT_Project__r.RecordType.Name  &lt;&gt; &apos;Parking Garage&apos;,  NCMT_Project__r.Location__r.Freeze_Depth__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on statistics from ASCE and other tables recognized as norms in structural and civil engineering practices, as are water table depths.</inlineHelpText>
    <label>Default Freeze Depth/Footing Depth Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>