force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Glazing_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Default_Glazing_Ratio__c</fullName>
    <formula>NCMT_Project__r.Building_Height_Parameter__r.Glazing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Glazing Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>