force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Glazing_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Glazing_SF__c</fullName>
    <formula>ROUND(( Glazing_Ratio_of_above_grade_skin__c * Default_Finished_Wall_Area_SF__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Glazing SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>