force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Green_Roof_BG__c.field-meta.xml
<CustomField>
    <fullName>Default_Green_Roof_BG__c</fullName>
    <label>Default Green Roof</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>