force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Green_Roof_PS__c.field-meta.xml
<CustomField>
    <fullName>Default_Green_Roof_PS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Green Roof PS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>