force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Heating_Load_Mbtuh__c.field-meta.xml
<CustomField>
    <fullName>Default_Heating_Load_Mbtuh__c</fullName>
    <formula>ROUND(( NCMT_Project__r.Total_GSF__c /Default_HVAC_Heating_Load__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Heating Load Mbtuh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>