force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_HVAC_Cooling_Load__c.field-meta.xml
<CustomField>
    <fullName>Default_HVAC_Cooling_Load__c</fullName>
    <description>Lookup Value from Building Parameters</description>
    <formula>NCMT_Project__r.Building_Height_Parameter__r.Cooling_load__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default HAVC Cooling Load</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>