force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_HVAC_Heating_Load__c.field-meta.xml
<CustomField>
    <fullName>Default_HVAC_Heating_Load__c</fullName>
    <description>Lookup value from building parameters</description>
    <formula>IF( NCMT_Project__r.RecordType.Name =&apos;Parking Garage&apos;,5.000,12.000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default HVAC Heating Load</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>