force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Intrusion_Detection_System_IDS__c.field-meta.xml
<CustomField>
    <fullName>Default_Intrusion_Detection_System_IDS__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Default Intrusion Detection System - IDS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>