force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Live_Load__c.field-meta.xml
<CustomField>
    <fullName>Default_Live_Load__c</fullName>
    <description>Lookup Value from Building Parameters</description>
    <formula>NCMT_Project__r.Building_Height_Parameter__r.Live_Load__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Live Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>