force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Over_Percentage_of_Perimeter__c.field-meta.xml
<CustomField>
    <fullName>Default_Over_Percentage_of_Perimeter__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>Default Over Percentage of Perimeter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>