force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Pent_House__c.field-meta.xml
<CustomField>
    <fullName>Default_Pent_House__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Pent House</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>