force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Plumbing_Fixtures__c.field-meta.xml
<CustomField>
    <fullName>Default_Plumbing_Fixtures__c</fullName>
    <formula>NCMT_Project__r.Building_Height_Parameter__r.Plumbing_Fixtures__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Plumbing Fixtures</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>