force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Retaining_Wall__c.field-meta.xml
<CustomField>
    <fullName>Default_Retaining_Wall__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Represents the area considered to be allowed for retaining wall construction. Dependent upon Basement Construction, Topography, etc. Ratios range from .15 to .30 for Low Rise to .025 for High Rise.</inlineHelpText>
    <label>Default Retaining Wall</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>