force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Retaining_Wall_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Retaining_Wall_SF__c</fullName>
    <formula>ROUND(( NCMT_Project__r.Total_GSF__c * Cladding_Retaining_Wall__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Retaining Wall SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>