force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Roofing_Skylights__c.field-meta.xml
<CustomField>
    <fullName>Default_Roofing_Skylights__c</fullName>
    <label>Default-Roofing Skylights SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>