force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Setback_100_FT__c.field-meta.xml
<CustomField>
    <fullName>Default_Setback_100_FT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Setback(100%) FT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>