force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Skin_Deviation_Check__c.field-meta.xml
<CustomField>
    <fullName>Default_Skin_Deviation_Check__c</fullName>
    <formula>IF( NCMT_Project__r.RecordType.Name == &apos;Parking Garage&apos;, ROUND(((SQRT(PGFloors__c))*4* Default_Average_Story_Height__c )/PGFloors__c,3),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Skin Deviation Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>