force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Skin_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Default_Skin_Ratio__c</fullName>
    <description>Default Skin Ratio formula</description>
    <formula>IF( NCMT_Project__r.RecordType.Name == &apos;Parking Garage&apos;, 

MAX(NCMT_Project__r.Building_Height_Parameter__r.Skin__c , ROUND(((SQRT(0.5* PGFloors__c)) *6* Default_Average_Story_Height__c )/PGFloors__c,3)) *  Default_Skin_Q_Modifiers__c  , 

MAX((NCMT_Project__r.Building_Height_Parameter__r.Skin__c  + ROUND(((SQRT(0.5* BGFloors__c)) *6* Default_Average_Story_Height__c )/BGFloors__c,3))/2,
ROUND(((SQRT(0.5*BGFloors__c )) *6* Default_Average_Story_Height__c )/BGFloors__c,3)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Typically from .35to .45 for most effective design.</inlineHelpText>
    <label>Default Skin Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>