force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Stairs_Flight__c.field-meta.xml
<CustomField>
    <fullName>Default_Stairs_Flight__c</fullName>
    <formula>Stair_Analysis_Total_Flights__c +  Default_Ad_nl_Primary_Circulation_Stair__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Stairs - Flight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>