force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Total_Wall_Area_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Total_Wall_Area_SF__c</fullName>
    <formula>ROUND( (Cladding_Skin_Ratio__c* NCMT_Project__r.Total_GSF__c) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Total Wall Area SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>