force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Vertical_Conveyance_Elevators__c.field-meta.xml
<CustomField>
    <fullName>Default_Vertical_Conveyance_Elevators__c</fullName>
    <description>Lookup Value from Building Parameters</description>
    <formula>NCMT_Project__r.Building_Height_Parameter__r.Elevators__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Vertical Conveyance - Elevators</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>