force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Vertical_Conveyance_Escalators__c.field-meta.xml
<CustomField>
    <fullName>Default_Vertical_Conveyance_Escalators__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Vertical Conveyance - Escalators</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>