force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Water_Table_Depth__c.field-meta.xml
<CustomField>
    <fullName>Default_Water_Table_Depth__c</fullName>
    <formula>IF( NCMT_Project__r.RecordType.Name == &apos;Parking Garage&apos;, 30, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Water Table Depth Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>