force-app/main/default/objects/Project_Level_Parameter__c/fields/Distribution_System__c.field-meta.xml
<CustomField>
    <fullName>Distribution_System__c</fullName>
    <label>Distribution System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAV</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>Chilled beams/hydronic radiant</fullName>
            </value>
            <value>
                <fullName>VRF</fullName>
            </value>
            <value>
                <fullName>UFAD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>