force-app/main/default/objects/Project_Level_Parameter__c/fields/Dominant_Glazing_System1__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Glazing_System1__c</fullName>
    <label>Dominant Glazing System1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wood framed</fullName>
            </value>
            <value>
                <fullName>Steel framed</fullName>
            </value>
            <value>
                <fullName>Aluminum framed</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>Curtain wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>