force-app/main/default/objects/Project_Level_Parameter__c/fields/Dominant_Glazing_System2__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Glazing_System2__c</fullName>
    <label>Dominant Glazing System2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operable</fullName>
            </value>
            <value>
                <fullName>Formerly operable but sealed</fullName>
            </value>
            <value>
                <fullName>Not operable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>