force-app/main/default/objects/Project_Level_Parameter__c/fields/Dominant_Glazing_System3__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Glazing_System3__c</fullName>
    <label>Dominant Glazing System3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single glazed</fullName>
            </value>
            <value>
                <fullName>Double glazed</fullName>
            </value>
            <value>
                <fullName>IGU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>