force-app/main/default/objects/Project_Level_Parameter__c/fields/Electrical_Load__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Load__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Electrical Load</description>
    <label>Electrical Load</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>