force-app/main/default/objects/Project_Level_Parameter__c/fields/Electrical_Load_kW__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Load_kW__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Electrical Load kW</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>