force-app/main/default/objects/Project_Level_Parameter__c/fields/Elevator_Type__c.field-meta.xml
<CustomField>
    <fullName>Elevator_Type__c</fullName>
    <label>Elevator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
            <value>
                <fullName>Side motor traction</fullName>
            </value>
            <value>
                <fullName>High-rise traction</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>