force-app/main/default/objects/Project_Level_Parameter__c/fields/Excavation_Percent_Shored_BG__c.field-meta.xml
<CustomField>
    <fullName>Excavation_Percent_Shored_BG__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Is currently set at a factor assuming 20% of the site will require shoring. User has the ability to either increasing or decreasing the quantity</inlineHelpText>
    <label>Excavation Percent Shored</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>