force-app/main/default/objects/Project_Level_Parameter__c/fields/Excavation_Percentage_Shored_BG__c.field-meta.xml
<CustomField>
    <fullName>Excavation_Percentage_Shored_BG__c</fullName>
    <description>Other building use from PLPtrigger</description>
    <label>Default Excavation: Percentage shored</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>