force-app/main/default/objects/Project_Level_Parameter__c/fields/Finished_Site__c.field-meta.xml
<CustomField>
    <fullName>Finished_Site__c</fullName>
    <description>Calculated from Site Area for Default Value - Footprint Area</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finished Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>