force-app/main/default/objects/Project_Level_Parameter__c/fields/Finished_Site_Area__c.field-meta.xml
<CustomField>
    <fullName>Finished_Site_Area__c</fullName>
    <label>Override Finished Site Area</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>