force-app/main/default/objects/Project_Level_Parameter__c/fields/Finished_Site_Comments__c.field-meta.xml
<CustomField>
    <fullName>Finished_Site_Comments__c</fullName>
    <label>Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>