force-app/main/default/objects/Project_Level_Parameter__c/fields/Finished_Wall_Area__c.field-meta.xml
<CustomField>
    <fullName>Finished_Wall_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Finished Wall Area</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>