force-app/main/default/objects/Project_Level_Parameter__c/fields/Fire_Protection__c.field-meta.xml
<CustomField>
    <fullName>Fire_Protection__c</fullName>
    <label>Wet Pipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Sprinklered, code compliant</fullName>
            </value>
            <value>
                <fullName>Fully Sprinklered, deficient</fullName>
            </value>
            <value>
                <fullName>Partially Sprinklered</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>