force-app/main/default/objects/Project_Level_Parameter__c/fields/Fixtures_Utility_Water_Coolers__c.field-meta.xml
<CustomField>
    <fullName>Fixtures_Utility_Water_Coolers__c</fullName>
    <formula>( Above_Ground__c +  Below_Ground__c )*3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Fixtures - Utility &amp; Water Coolers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>