force-app/main/default/objects/Project_Level_Parameter__c/fields/Flat_Roof_BG__c.field-meta.xml
<CustomField>
    <fullName>Flat_Roof_BG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flat Roof</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>