force-app/main/default/objects/Project_Level_Parameter__c/fields/Freeze_Depth_Footing_Depth_BG__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Depth_Footing_Depth_BG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Freeze Depth Footing Depth Ft</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>