force-app/main/default/objects/Project_Level_Parameter__c/fields/Glazing_Ratio_of_above_grade_skin__c.field-meta.xml
<CustomField>
    <fullName>Glazing_Ratio_of_above_grade_skin__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Glazing Ratio (% of above-grade skin)</description>
    <label>Glazing Ratio (% of above-grade skin)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>