force-app/main/default/objects/Project_Level_Parameter__c/fields/Gross_Building_Area__c.field-meta.xml
<CustomField>
    <fullName>Gross_Building_Area__c</fullName>
    <description>Parking Garage Gross Area calculated from Project.</description>
    <formula>If (NCMT_Project__r.RecordType.Name == &apos;Parking Garage&apos; ,
NCMT_Project__r.Parking_Garage_Gross_Area_SF__c
, If (TEXT(NCMT_Project__r.Building_Type__c) == &apos;Office&apos; ,
NCMT_Project__r.Total_Area_Including_Parking__c
, 0 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Building Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>